[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy_1.gd" type="Script" id=1]
[ext_resource path="res://Anims/Aglea/Движ/anim3.png" type="Texture" id=2]
[ext_resource path="res://qn8kKPkSkEQZWgQvA51oyOlYDY7q2bpXbJ3vHAoDKF0LAEPf76eC6TI3XxkAOgtpDiPgueiaHTQfywcbq8OV_4R4.jpg" type="Texture" id=3]
[ext_resource path="res://Anims/Aglea/Движ/anim4.png" type="Texture" id=4]
[ext_resource path="res://Anims/Aglea/Движ/anim5.png" type="Texture" id=5]
[ext_resource path="res://Anims/Aglea/Движ/anim6.png" type="Texture" id=6]
[ext_resource path="res://Anims/Aglea/Движ/anim7.png" type="Texture" id=7]
[ext_resource path="res://Anims/Aglea/Движ/anim8.png" type="Texture" id=8]
[ext_resource path="res://Anims/Aglea/Движ/anim9.png" type="Texture" id=9]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, 0, -8, 0, -8, 22, -1, 22, -1, 14, 0, 14, 0, 22, 6, 22, 6, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "щгп"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.16, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 14, -1, 14, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 14, 8, 14, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.5, 53.5 )

[node name="Aglea" type="KinematicBody2D"]
position = Vector2( 515, 378 )
z_index = 3
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -1.46383, 0 )
scale = Vector2( 0.690788, 1 )
polygon = PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 )
one_way_collision_margin = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionPolygon2D"]
reset_on_save = false
anims/RESET = SubResource( 4 )
"anims/щгп" = SubResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.25, 6 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "run"
frame = 4

[node name="HP_Enemy_1" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -29.0
margin_right = 198.0
margin_bottom = -7.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="Timer_Of_HP" type="Timer" parent="HP_Enemy_1"]
autostart = true

[node name="Mana_Enemy_1" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -24.0
margin_right = 198.0
margin_bottom = -2.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 250.0
value = 250.0
texture_progress = ExtResource( 3 )
tint_progress = Color( 0, 0.133333, 1, 1 )
nine_patch_stretch = true

[node name="Timer_Of_Mana" type="Timer" parent="Mana_Enemy_1"]
autostart = true

[node name="value_of_HP" type="Label" parent="."]
margin_left = -9.0
margin_top = -30.0
margin_right = 19.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
text = "500

"

[node name="value_of_Mana" type="Label" parent="."]
margin_left = -9.0
margin_top = -24.0
margin_right = 31.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
text = "250

"

[node name="Trigger_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_Area"]
position = Vector2( -3.5, -21.5 )
shape = SubResource( 2 )
disabled = true

[node name="Dialoge_Window_Position" type="Position2D" parent="."]
position = Vector2( 10, -42 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3, 0 )

[connection signal="timeout" from="HP_Enemy_1/Timer_Of_HP" to="." method="_on_Timer_Of_HP_timeout"]
[connection signal="timeout" from="Mana_Enemy_1/Timer_Of_Mana" to="." method="_on_Timer_Of_Mana_timeout"]
[connection signal="body_entered" from="Trigger_Area" to="." method="_on_Trigger_Area_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
